syntax = "proto3";
package stream;

service Stream {
  rpc ServerStream(StreamRequest) returns (stream StreamResponse) {}
}

message StreamRequest {
  string message = 1;
}

message StreamResponse {
  string message = 1;
}
